<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solar Tilt</string>
    <string name="action_settings">Settings</string>
    <string name="todays_tilt_angle">Today\'s Tilt Angle:</string>
    <string name="tilt_angle">Tilt Angle:</string>
    <string name="latitude">Latitude:</string>
    <string name="date">Date:</string>
    <string name="seasonal_tilt_angle">Optimal seasonal tilt angles.</string>
    <string name="seasonal_tilt_angles_two_lines">Optimal seasonal \ntilt angles. </string>
    <string name="slash">/</string>
    <string name="edit">Modify date or latitude.</string>
    <string name="edit2">Modify latitude.</string>
    <string name="idealTilt">Optimal Tilt Angles by Season</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring_colon">Spring:</string>
    <string name="summer_colon">Summer:</string>
    <string name="fall_colon">Fall:</string>
    <string name="winter_colon">Winter:</string>
    <string name="GPSoff">GPS is off.</string>
    <string name="turn_on_GPS">Turn on GPS?</string>
    <string name="gpsoff">GPS is off.\n\nTurn on GPS?</string>
    <string name="GPSnotAvailable">GPS service not available.  Enter latitude manually.</string>
    <string name="waitingGPS">Waiting for GPS update.</string>
    <string name="GPSnowCurrentOn">Tap here to turn off GPS.</string>
    <string name="GPSnowCurrentOff">Tap here to turn on GPS.</string>
    <string name="GPSnotOn">GPS not on. Go to \'Modify date or latitude\' or tap here to turn on GPS.</string>
    <string name="GPSnotOnSeasonal">GPS not on. Go to \'Modify latitude\' or tap here to turn on GPS.</string>
    <string name="tapHere">Tap here to turn on GPS</string>
    <string name="degreee">\u00b0</string>
    <string name="quotes">\"</string>
    <string name="quote">\'</string>
    <string name="hintmm">mm</string>
    <string name="hintdd">dd</string>
    <string name="hintlatitude">##</string>
    <string name="invalidDegrees">Invalid latitude degrees.</string>
    <string name="badLatitude">Error: Latitude must be between -90 and +90 degrees.</string>
    <string name="blankDegrees">Error: Blank degree field.</string>
    <string name="blankSeconds">Error: Blank seconds field.</string>
    <string name="blankMinutes">Error: Blank minutes field.</string>
    <string name="badDegrees">Error: Degrees must be between -90 and + 90.</string>
    <string name="badMinutes">Error: Minutes must be between 0 and 59.</string>
    <string name="badSeconds">Error: Seconds must be between 0 and 59.</string>
    <string name="badMonth">Error: Invalid month.</string>
    <string name="badDay">Error: Invalid day.</string>
    <string name="badTiltAngle">Error: Blank tilt angle field.</string>
    <string name="dots">". . ."</string>
    <string name="smalldots">...</string>
    <string name="levelingTool">Tap tilt angle to display leveling tool.</string>
    <string name="noPermission">Cannot retrieve latitude because location permission not granted. Enter location manually or tap here to allow location permission.</string>
    <string name="noPermissionDone">Cannot retrieve latitude because location permission not granted for this app. Enter latitude manually.</string>
    <string name="privacyPolicy">Privacy Policy</string>

</resources>
